--- a/style.css
+++ b/style.css
@@ -186,6 +186,121 @@ footer {
     color: #FCFCFC;
 }
 
+.active-player {
+    background-color: #FDA214;
+}
+
+.opa {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: none;
+    height: 100vh;
+    z-index: 2;
+    background-color: #000;
+    opacity: 50%;
+}
+
+.win-sect {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 32px 24px 24px 24px;
+    background-color: #fff;
+    position: absolute;
+    top: 10%; 
+    left: 5%;
+    width: 90%;
+    z-index: 3;
+    border-radius: 10px;
+}
+
+.player-win {
+    color: #152938;
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 9px;
+}
+
+.game-over {
+    color: #7191A5;
+    font-size: 14px;
+    font-weight: 700;
+    padding-bottom: 24px;
+}
+
+.classement {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 100%;
+    margin-bottom: 24px;
+}
+
+.player-classement {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #DFE7EC;
+    padding: 11px 16px 12px 16px;
+    border-radius: 5px;
+}
+
+.win-div {
+    background-color: #152938;
+}
+.win, .paire-para-win, .player-span-win {
+    color: #FCFCFC;
+}
+.paire-para-win {
+    font-size: 20px;
+    font-weight: 700;
+}
+.player-span-win {
+    font-size: 13px;
+    font-weight: 700;
+}
+.win-para {
+    font-size: 13px;
+    font-weight: 700;
+}
+.player-span {
+    color: #7191A5;
+    font-size: 13px;
+    font-weight: 700;
+}
+.paire-para {
+    color: #304859;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.btn-win-div {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 100%;
+}
+.restart-win, .new-game-win {
+    padding: 12px 0 14px 0;
+    border: none;
+    text-align: center;
+    border-radius: 26px;
+    font-size: 18px;
+    font-weight: 700;
+}
+.restart-win {
+    background-color: #FDA214;
+    color: #FCFCFC;
+}
+.new-game-win {
+    background-color: #DFE7EC;
+    color: #304859;
+}
 @media screen and (min-width: 376px) {
     form {
         width: 60%;
